--- a/style.css
+++ b/style.css
@@ -43,6 +43,67 @@ body{
     font-size: 30px;
 }
 
+#output-text{
+    width: 250px;
+    height: 120px;
+    float: left;
+}
+
+#microphone{
+    height: 30px;
+    width: 30px;
+    float: right;
+    background-image: url(Images/mic.png);
+    background-size: 100% 100%;
+    border-radius: 50%;
+    margin: 20px;
+    margin-top:45px;
+}
+
+.record{
+    animation: microphone-animation 1.5s infinite;
+}
+
+@keyframes microphone-animation{
+    0%{
+        transform: scale(0.9);
+    }
+    70%{
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0,148,255,0.4); 
+    }
+    100%{
+        transform: scale(0.9);
+        box-shadow: 0 0 0 rgba(0,148,255,0);
+    }
+}
+
+.tooltip{
+    width: 200px;
+    font-size: 9px;
+    color: #636363;
+    position: absolute;
+    background-color: #dddddd;
+    padding: 10px;
+    top:45px;
+    transform: translateX(50px);
+    border-radius: 5px;
+    visibility: hidden;
+}
+
+.tooltip::before{
+    content: '';
+    position: absolute;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #dddddd transparent transparent; 
+    left:0;
+    margin-left: -10px;
+}
+
+#output-microphone:hover .tooltip{
+    visibility: visible;
+}
 #output-value{
     word-wrap: break-word;
     word-break: break-all;
